--- a/wordCount/src/main/resources/application.properties
+++ b/wordCount/src/main/resources/application.properties
@@ -1,3 +1,2 @@
-word.count.jstorm.count.file=D:/testFile/test.txt
-word.count.jstorm.save.file=D:/testFile/saveTest.txt
+file.path.properties.name = filePath.properties
 
