--- a/wordCount/src/main/resources/application.properties
+++ b/wordCount/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 file.path.properties.name = filePath.properties
+
+#-------- mongo config --------
+mongodb.host = localhost
+mongodb.port = 1234
+mongodb.userName = 123456
+mongodb.password = 123456
+mongodb.dataBaseName = test_db
