--- a/word-count/pom.xml
+++ b/word-count/pom.xml
@@ -10,7 +10,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.example.mq.jstorm</groupId>
-	<artifactId>wordCount</artifactId>
+	<artifactId>word-count</artifactId>
 
 	<dependencies>
 		<dependency>
